--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import './variables';
+
+html, body {
+  padding: 0;
+  margin: 0;
+}
+.app-wrapper {
+  max-width: 1180px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+@media (min-width: $screen-sm-min) {
+  .app-wrapper {
+    max-width: 700px;
+  }
+}
+@media (min-width: $screen-md-min) {
+  .app-wrapper {
+    max-width: 950px;
+  }
+}
+@media (min-width: $screen-lg-min) {
+  .app-wrapper {
+    max-width: 1180px;
+  }
+}
